# tower-game

./: .editorconfig  .gitignore  CMakeLists.txt  README.md  cmake_install.cmake
.clangd/index/: FILE.h.3BAE3350D8B6B38402CC0F1A31FB92B5CCFEA438.idx  __FILE.h.8F46FF4B1CAF1612019C8E170BF448455B757350.idx  __fpos64_t.h.0171010DB7E65EAFB728B9F3517B58F648E84D88.idx  __fpos_t.h.D6A63434B1055FC70039AF60F4D4122A1FCA7E1B.idx  __mbstate_t.h.C81B97DF48547EE2F81ECBAE7B125DF7A0E6FC1A.idx  cdefs.h.1687ED81C883FF52ACD24378CA0B0E62851A9C68.idx  features.h.3C187EA00A7A774C5A75C66E04ACFF0AFF8BA465.idx  libc-header-start.h.C6AF98FF8E68B4A555BDE46B6872D770536D100F.idx  long-double.h.31B4B478F6869D95BAAAFB59C8F91158D1CDAD79.idx  main.c.C6E5498D7790E65E1AD71F1C7D778B853059E61D.idx  stdarg.h.844025EFA00A5D7B342AA5B296C5846CE68B5A6E.idx  stdc-predef.h.220A7A9C186F0815195FD4B34E600DC501B05C03.idx  stddef.h.26F3ED4EE0C91A52C4668373455C2E04F0C38C0A.idx  stdio.h.8D66DACA4CF95724B973754FC30817C98761AA58.idx  stdio_lim.h.81755F3D471BD5B59BFC2E1E2544208ACC8CCAA1.idx  struct_FILE.h.F6AD703F59C29C4EE782DF9A1C9B67E241ABC67F.idx  stubs-64.h.B0AA87FD94324A17B420E5678BBE9D793018D9B6.idx  stubs.h.FC396DBAE8C3DB87384A06578D0E5D15381EEFA3.idx  sys_errlist.h.35DF07ED589A1A5AF4980C4271BB6745488BD6BE.idx  types.h.1F6BF5723134DE28ED3FE512DC2BB7FE8905D43C.idx  typesizes.h.F160AAE5A3CAE971E346FFF582F70CF7A4B48861.idx  wordsize.h.DFA039FD8A235FB805200CFA943837C4944D4DB7.idx
include/: tower.h  tower_game.h  utils.h
src/: main.c  tower.c  tower_game.c
